jQueryMultipleSelectBox Change Log

Version 0.8.1
====================
．Add isPopupMode
．Rename containerHistory's startIndex, currentIndex, prevStartIndex and prevCurrentIndex
．Remove getMultipleSelectBoxCachedRows's isReNew parameter
．Add method: clearMultipleSelectBoxCachedRows
．Add method: selectMultipleSelectBoxRow, unselectMultipleSelectBoxRow, selectAllMultipleSelectBoxRows, unselectAllMultipleSelectBoxRows, enableMultipleSelectBoxRow and disableMultipleSelectBoxRow
．Minor bug fixes

Version 0.8.0
====================
．Remove method: recalculateMultipleSelectBox, getMultipleSelectBoxInfo, getSelectedRowIndexArray and drawOption.isGetPositionByCache
．Add method: getMultipleSelectBoxViewport and getMultipleSelectBoxHistory
．Add namespace for all plugin event binding
．Change options: option name scrollDistanceCalculator to scrollHelper
．Change options: default scrollSpeed 20 to 50
．Rename containerHistory's lastStartIndex, lastCurrentIndex and prevSelectedArray
．Fix bug for IE10: detect touch device return true always
．Minor changes

Version 0.7.3
====================
．Fix issue 5: plugin have been triggered but it may not have been initialized after the global event

Version 0.7.2
====================
．Fix bug for jQuery 1.9

Version 0.7.1
====================
．Fix issue 4: selection cleared after scrolling

Version 0.7.0
====================
．Support touch device
．Add parameter: scrollDistanceCalculator
．Remove parameter: valueRendererArray

Version 0.6.5
====================
．Fix bug for Chrome22 and Opera12

Version 0.6.4
====================
．Fix bug for jQuery1.2, IE6 and IE7

Version 0.6.3
====================
．Fix bug: callback functions doesn't be triggered on key down
．Change parameters for callback functions
．Minor changes

Version 0.6.2
====================
．Add support for key event
．Add support for tab focus
．Minor bug fixes

Version 0.6.1
====================
．Rename option's submitFieldName to submitField
．Add more public functions