@@ -3,7 +3,7 @@
 
 	<property name="version" value="0.8.1" />
 	<!-- Google Closure Compiler (http://code.google.com/p/closure-compiler/downloads/list) -->
-	<property name="compressorPath" location="../../ex_js/compiler-20130722/compiler.jar" />
+	<property name="compressorPath" location="../../ex_js/compiler-20131118/compiler.jar" />
 	<tstamp>
 		<format property="today" pattern="yyyy/MM/dd" />
 	</tstamp>
