@@ -52,6 +52,7 @@ fieldset span.legend {
 fieldset span.legend i.newlabel {
 	color: red;
 	font-size: 10px;
+	padding-left: 10px;
 }
 
 pre {
@@ -135,12 +136,12 @@ pre {
 		IE 6+, Safari 5</small>
 
 	<!-- ============================================================================================================== -->
-	<!-- Simple Demo: -->
+	<!-- Simple demo: -->
 	<!-- ============================================================================================================== -->
 
 	<fieldset>
 		<span class="legend" onclick="$(this).next().slideToggle('slow');">Simple
-			Demo:</span>
+			demo:</span>
 		<div>
 			<ul id="MultipleSelectBox">
 				<li>Item 1</li>
@@ -191,12 +192,12 @@ $(document).ready(function() {
 	</fieldset>
 
 	<!-- ============================================================================================================== -->
-	<!-- Simple Demo: Max Limit -->
+	<!-- Simple demo: Max limit -->
 	<!-- ============================================================================================================== -->
 
 	<fieldset>
 		<span class="legend" onclick="$(this).next().slideToggle('slow');">Simple
-			Demo: Max Limit</span>
+			demo: Max limit</span>
 		<div style="display: none;">
 			<ul id="MultipleSelectBox_MaxLimit">
 				<li>Item 1</li>
@@ -247,12 +248,12 @@ $(document).ready(function() {
 	</fieldset>
 
 	<!-- ============================================================================================================== -->
-	<!-- Simple Demo: Scroll Speed -->
+	<!-- Simple demo: Scroll speed -->
 	<!-- ============================================================================================================== -->
 
 	<fieldset>
 		<span class="legend" onclick="$(this).next().slideToggle('slow');">Simple
-			Demo: Scroll Speed</span>
+			demo: Scroll speed</span>
 		<div style="display: none;">
 			<ul id="MultipleSelectBox_ScrollSpeed">
 				<li>Item 1</li>
@@ -303,12 +304,12 @@ $(document).ready(function() {
 	</fieldset>
 
 	<!-- ============================================================================================================== -->
-	<!-- Simple Demo: Show Result -->
+	<!-- Simple demo: Show result -->
 	<!-- ============================================================================================================== -->
 
 	<fieldset>
 		<span class="legend" onclick="$(this).next().slideToggle('slow');">Simple
-			Demo: Show Result</span>
+			demo: Show result</span>
 		<div style="display: none;">
 			<ul id="MultipleSelectBox_ShowResult">
 				<li>Item 1</li>
@@ -373,12 +374,12 @@ $(document).ready(function() {
 	</fieldset>
 
 	<!-- ============================================================================================================== -->
-	<!-- Simple Demo: Form Component -->
+	<!-- Simple demo: Form component -->
 	<!-- ============================================================================================================== -->
 
 	<fieldset>
 		<span class="legend" onclick="$(this).next().slideToggle('slow');">Simple
-			Demo: Form Component <small>(value-render)</small>
+			demo: Form component <small>(value-render)</small>
 		</span>
 		<div style="display: none;">
 			<ul id="MultipleSelectBox_FormComponent">
@@ -438,12 +439,12 @@ $(document).ready(function() {
 	</fieldset>
 
 	<!-- ============================================================================================================== -->
-	<!-- Simple Demo: Draw Range -->
+	<!-- Simple demo: Draw range -->
 	<!-- ============================================================================================================== -->
 
 	<fieldset>
 		<span class="legend" onclick="$(this).next().slideToggle('slow');">Simple
-			Demo: Draw Range</span>
+			demo: Draw range</span>
 		<div style="display: none;">
 			<ul id="MultipleSelectBox_DrawRange">
 				<li>Item 1</li>
@@ -516,12 +517,12 @@ $(document).ready(function() {
 	</fieldset>
 
 	<!-- ============================================================================================================== -->
-	<!-- Simple Demo: Horizontal Box -->
+	<!-- Simple demo: Horizontal box -->
 	<!-- ============================================================================================================== -->
 
 	<fieldset>
 		<span class="legend" onclick="$(this).next().slideToggle('slow');">Simple
-			Demo: Horizontal Box &nbsp;<i class="newlabel">New!</i>
+			demo: Horizontal box<i class="newlabel">New!</i>
 		</span>
 		<div style="display: none;">
 			<div style="text-align: center;">
@@ -576,12 +577,12 @@ $(document).ready(function() {
 	</fieldset>
 
 	<!-- ============================================================================================================== -->
-	<!-- Advance Demo: DropDown -->
+	<!-- Advance demo: Drop down -->
 	<!-- ============================================================================================================== -->
 
 	<fieldset>
 		<span class="legend" onclick="$(this).next().slideToggle('slow');">Advance
-			Demo: DropDown</span>
+			demo: Drop down</span>
 		<div style="display: none;">
 			<input type="text" id="controlDropDown" value="Click Me!" /><br />
 			<ul id="MultipleSelectBox_DropDown">
@@ -635,12 +636,12 @@ $(document).ready(function() {
 	</fieldset>
 
 	<!-- ============================================================================================================== -->
-	<!-- Advance Demo: Animation -->
+	<!-- Advance demo: Animation -->
 	<!-- ============================================================================================================== -->
 
 	<fieldset>
 		<span class="legend" onclick="$(this).next().slideToggle('slow');">Advance
-			Demo: Animation</span>
+			demo: Animation</span>
 		<div style="display: none;">
 			<ul id="MultipleSelectBox_Animation">
 				<li>Item 1</li>
